[package]
name = "ddls"
version = "0.0.0"
edition = "2021"
authors = ["Raphael Darley <raphael@raphaeldarley.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for managing and deploying programs on servers"
homepage = "https://github.com/raphaeldarley/ddls"
repository = "https://github.com/raphaeldarley/ddls"

[dependencies]
axum = "0.7.5"
git2 = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
] }
tokio-process = "0.2.5"
