[package]
name = "ddls"
version = "0.0.0"
edition = "2021"
authors = ["Raphael Darley <raphael@raphaeldarley.com>"]

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
git2 = "0.19.0"
nix = { version = "0.29.0", features = ["signal"] }
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "process",
] }
toml_edit = { version = "0.22.16", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
